--- a/src/gui/ignorelisteditor.ui
+++ b/src/gui/ignorelisteditor.ui
@@ -37,13 +37,6 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="0" rowspan="3">
-    <widget class="QListWidget" name="listWidget">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="1">
     <widget class="QPushButton" name="addPushButton">
      <property name="enabled">
@@ -75,6 +68,32 @@
      <property name="wordWrap">
       <bool>true</bool>
      </property>
+    </widget>
+   </item>
+   <item row="1" column="0" rowspan="3">
+    <widget class="QTableWidget" name="tableWidget">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="selectionMode">
+      <enum>QAbstractItemView::SingleSelection</enum>
+     </property>
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+     <property name="columnCount">
+      <number>2</number>
+     </property>
+     <column>
+      <property name="text">
+       <string>Pattern</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Allow Deletion</string>
+      </property>
+     </column>
     </widget>
    </item>
   </layout>
